--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ cryptography==46.0.2
 Django==5.2.6
 django-allauth==65.12.0
 django-environ==0.12.0
+django-filter==25.2
 djangorestframework==3.16.1
 factory_boy==3.3.3
 Faker==37.11.0
